--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ pyarrow==11.0.0
 pydeck==0.8.0
 Pygments==2.14.0
 Pympler==1.0.1
+plotly==5.20.0
+
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
